@@ -1,19 +1,15 @@
 package com.controle.demandas.api.service;
 
-import com.controle.demandas.api.dto.DemandaCreateDTO;
-import com.controle.demandas.api.dto.DemandasCidadaoDTO;
+import com.controle.demandas.api.dtoDemandas.*;
 import com.controle.demandas.api.exception.DemandaException;
-import com.controle.demandas.api.model.Demanda;
 import com.controle.demandas.api.model.Cidadao;
+import com.controle.demandas.api.model.Demanda;
 import com.controle.demandas.api.repository.DemandaRepository;
-import com.controle.demandas.api.response.ApiResponse;
-
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class DemandaService {
@@ -24,84 +20,53 @@ public class DemandaService {
     @Autowired
     private CidadaoService cidadaoService;
 
-    public ResponseEntity<ApiResponse<Demanda>> criar(DemandaCreateDTO dto) {
-        
-        Cidadao cidadao = cidadaoService.buscarPorCpf(dto.getCpfCidadao());
-        if (cidadao == null) {
-            throw new DemandaException.DemandaNotFoundException("Cidadão não existe");
-        }
+    public Demanda criarDemanda(DemandaCreateDTO dto) {
+        Cidadao cidadao = cidadaoService.buscarPorCpfEntity(dto.getCpfCidadao());
 
         Demanda demanda = Demanda.builder()
-            .titulo(dto.getTitulo())
-            .descricao(dto.getDescricao())
-            .status("Aberta")
-            .cidadao(cidadao)
-            .build();
+                .titulo(dto.getTitulo())
+                .descricao(dto.getDescricao())
+                .status("Aberta")
+                .cidadao(cidadao)
+                .build();
 
-        Demanda salvo = demandaRepository.save(demanda);
-        return ResponseEntity.status(HttpStatus.CREATED)
-                .body(ApiResponse.created("Demanda criada com sucesso!", salvo));
+        return demandaRepository.save(demanda);
     }
 
-    public ResponseEntity<ApiResponse<List<Demanda>>> listarTodos() {
-        List<Demanda> demandas = demandaRepository.findAll();
-        return ResponseEntity.ok(ApiResponse.success("Lista de demandas recuperada com sucesso!", demandas));
+    public List<DemandaSearchDTO> listarTodasDemandas() {
+        return demandaRepository.findAll().stream()
+                .map(this::mapToSearchDTO)
+                .collect(Collectors.toList());
     }
 
-    public ResponseEntity<ApiResponse<List<DemandasCidadaoDTO>>> listarPorCidadao(String cpf) {
-        Cidadao cidadao = cidadaoService.buscarPorCpf(cpf);
-        if (cidadao == null) {
-            throw new DemandaException.DemandaNotFoundException("Cidadão não encontrado");
-        }
-
-        List<Demanda> demandas = demandaRepository.findByCidadaoCpf(cpf);
-
-        List<DemandasCidadaoDTO> listaDTO = demandas.stream().map(d ->
-            DemandasCidadaoDTO.builder()
-                .id(d.getId())
-                .titulo(d.getTitulo())
-                .descricao(d.getDescricao())
-                .status(d.getStatus())
-                .cpfCidadao(d.getCidadao().getCpf())
-                .nomeCidadao(d.getCidadao().getNome())
-                .emailCidadao(d.getCidadao().getEmail())
-                .build()
-        ).toList();
-
-        String mensagem = String.format(
-            "Lista de demandas do cidadão %s (CPF: %s) recuperada com sucesso!",
-            cidadao.getNome(), cidadao.getCpf()
-        );
-
-        return ResponseEntity.ok(ApiResponse.success(mensagem, listaDTO));
+    public List<DemandaSearchDTO> listarPorCidadao(String cpf) {
+        cidadaoService.buscarPorCpfEntity(cpf); // valida existência do cidadão
+        return demandaRepository.findByCidadaoCpf(cpf).stream()
+                .map(this::mapToSearchDTO)
+                .collect(Collectors.toList());
     }
 
-    public Demanda buscarPorId(Long id) {
+    public Demanda buscarPorIdEntity(Long id) {
         return demandaRepository.findById(id)
                 .orElseThrow(() -> new DemandaException.DemandaNotFoundException("Demanda não encontrada"));
     }
 
-    public ResponseEntity<ApiResponse<Demanda>> atualizarDemanda(Long id, DemandaCreateDTO dto) {
-        Demanda demanda = buscarPorId(id);
-
-        demanda.setTitulo(dto.getTitulo());
-        demanda.setDescricao(dto.getDescricao());
-
-        Cidadao cidadao = cidadaoService.buscarPorCpf(dto.getCpfCidadao());
-        if (cidadao == null) {
-            throw new DemandaException.DemandaForbiddenException("Cidadão não existe");
-        }
-        demanda.setCidadao(cidadao);
-
-        Demanda atualizado = demandaRepository.save(demanda);
-        return ResponseEntity.ok(ApiResponse.success("Demanda atualizada com sucesso!", atualizado));
+    public DemandaSearchDTO buscarPorId(Long id) {
+        return mapToSearchDTO(buscarPorIdEntity(id));
     }
 
-    public ResponseEntity<ApiResponse<Demanda>> alterarStatus(Long id, String acao) {
+    public Demanda atualizarDemanda(Long id, DemandaUpdateDTO dto) {
+        Demanda demanda = buscarPorIdEntity(id);
+        demanda.setTitulo(dto.getTitulo());
+        demanda.setDescricao(dto.getDescricao());
+        return demandaRepository.save(demanda);
+    }
 
-        Demanda demanda = buscarPorId(id);
+    public Demanda alterarStatus(Long id, DemandaStatusDTO dto) {
+        Demanda demanda = buscarPorIdEntity(id);
+        String acao = dto.getStatus().toLowerCase();
 
-        switch (acao.toLowerCase()) {
+        switch (acao) {
             case "atender":
                 if (demanda.getStatus().equals("Aberta") || demanda.getStatus().equals("Não Concluída")) {
                     demanda.setStatus("Em Andamento");
@@ -127,10 +92,10 @@ public class DemandaService {
                 demanda.setStatus("Cancelada");
                 break;
 
-            case "nao_concluida":
+            case "devolver":
                 if (!demanda.getStatus().equals("Em Andamento")) {
                     throw new DemandaException.DemandaForbiddenException(
-                            "Só é possível marcar como não concluída uma demanda que está Em Andamento");
+                            "Só é possível devolver uma demanda que está Em Andamento");
                 }
                 demanda.setStatus("Não Concluída");
                 break;
@@ -139,17 +104,30 @@ public class DemandaService {
                 throw new DemandaException.DemandaForbiddenException("Ação de status inválida");
         }
 
-        Demanda atualizado = demandaRepository.save(demanda);
-        return ResponseEntity.ok(ApiResponse.success("Status da demanda alterado com sucesso!", atualizado));
+        return demandaRepository.save(demanda);
     }
 
-
-    public ResponseEntity<ApiResponse<Void>> excluir(Long id) {
-        demandaRepository.deleteById(id);
-        return ResponseEntity.ok(ApiResponse.success("Demanda excluída com sucesso!", null));
+    public void excluirDemanda(Long id) {
+        Demanda existente = buscarPorIdEntity(id);
+        demandaRepository.delete(existente);
     }
 
-    public boolean existePorTitulo(String titulo) {
-        return demandaRepository.existsByTitulo(titulo);
+    public List<DemandaSearchDTO> filtrarDemanda(DemandaFilterDTO filter) {
+        return demandaRepository.findAll().stream()
+                .filter(d -> filter.getTitulo() == null || d.getTitulo().toLowerCase().contains(filter.getTitulo().toLowerCase()))
+                .filter(d -> filter.getStatus() == null || d.getStatus().equalsIgnoreCase(filter.getStatus()))
+                .filter(d -> filter.getCpfCidadao() == null || d.getCidadao().getCpf().equals(filter.getCpfCidadao()))
+                .map(this::mapToSearchDTO)
+                .collect(Collectors.toList());
+    }
+
+    public DemandaSearchDTO mapToSearchDTO(Demanda d) {
+        return DemandaSearchDTO.builder()
+                .id(d.getId())
+                .titulo(d.getTitulo())
+                .descricao(d.getDescricao())
+                .status(d.getStatus())
+                .cpfCidadao(d.getCidadao().getCpf())
+                .build();
     }
 }
